force-app/main/default/objects/ppmail__Beacon_Job__c/ppmail__Beacon_Job__c.object-meta.xml
<CustomObject>
    <description>Represents an asynchronous job that is processed by Unlimail.</description>
    <label>Beacon Job</label>
    <nameField>
        <displayFormat>PMBJ-{000000}</displayFormat>
        <label>Beacon Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beacon Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>