force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Allowed_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Allowed_Attempts__c</fullName>
    <description>The maximum number of times the job is allowed to be attempted. If this field is blank, the job will never be retried.</description>
    <label>Allowed Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>