force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Attempts__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Attempts__c</fullName>
    <description>The number of times the job has been attempted.</description>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>