force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Autorun__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Autorun__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this job will be automatically executed by a scheduled job.</description>
    <label>Autorun</label>
    <type>Checkbox</type>
</CustomField>