force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Details__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Details__c</fullName>
    <description>A long text field to store any details or messages related to the job&apos;s execution, such as error messages or status updates.</description>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>