force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Function__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Function__c</fullName>
    <description>The name of the function class that this job will execute.</description>
    <label>Function</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>