force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Is_Queueable__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Is_Queueable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the job can be queued for asynchronous execution.</description>
    <label>Is Queueable</label>
    <type>Checkbox</type>
</CustomField>