force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Payload__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Payload__c</fullName>
    <description>A JSON-formatted string that contains the data the job needs to perform its function.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>