force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Priority__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Priority__c</fullName>
    <description>A number that determines the priority of the job. A lower number means a higher priority.</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>