force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Remove__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Remove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this job will be removed after it is completed.</description>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>