force-app/main/default/objects/ppmail__Beacon_Job__c/fields/ppmail__Run_After__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Run_After__c</fullName>
    <description>A timestamp that specifies when the job should be run. If this field is blank, the job will be run as soon as possible.</description>
    <label>Run After</label>
    <type>DateTime</type>
</CustomField>