force-app/main/default/objects/ppmail__Beacon_Job__c/listViews/ppmail__All_Beacon_Jobs.listView-meta.xml
<ListView>
    <fullName>ppmail__All_Beacon_Jobs</fullName>
    <columns>NAME</columns>
    <columns>ppmail__Function__c</columns>
    <columns>ppmail__Status__c</columns>
    <columns>ppmail__Run_After__c</columns>
    <columns>ppmail__Payload__c</columns>
    <columns>ppmail__Details__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Beacon Jobs</label>
</ListView>